test/core/errors/array_types_error/zs/packed_implicit_array_error.zs
package packed_implicit_array_error;

struct PackedImplicitArrayError
{
    packed implicit uint8 array[];
};
